adjusts ok (#3)
