# src/users/dto/user.dto.ts
@@ -6,27 +6,27 @@ import {
 } from 'src/common/types/deep-partial-object';
 
 /**
- * Data Transfer Object representing a system user.
+ * Data Transfer Object representing a user.
  *
  * @remarks
- * This DTO is used to transfer system user data between different layers of the application.
+ * This DTO is used to transfer user data between different layers of the application.
  * It includes metadata such as unique identifier, type, name, external id, creation and update timestamps,
  * and an optional deletion timestamp.
  *
- * @property id - Unique identifier for the system user (UUID).
+ * @property id - Unique identifier for the user (UUID).
  * @property type - Type of the user: 'CUSTOMER' or 'EMPLOYEE'.
  * @property name - Name of the user.
- * @property externalId - External identifier of the user in other systems.
+ * @property assembleUserId - External identifier of the user in other systems.
  * @property createdAt - Timestamp when the user was created.
  * @property updatedAt - Timestamp when the user was last updated.
  * @property deletedAt - If null, the user is not deleted; otherwise, it is the timestamp when the user was deleted.
  *
  * @constructor
- * Creates a new instance of SystemUserDto, optionally assigning properties from a partial or nullable object.
+ * Creates a new instance of UserDto, optionally assigning properties from a partial or nullable object.
  */
-export class SystemUserDto {
+export class UserDto {
   @ApiProperty({
-    description: 'Unique identifier for the system user',
+    description: 'Unique identifier for the user',
     example: '123e4567-e89b-12d3-a456-426614174000',
   })
   id: string;
@@ -43,7 +43,7 @@ export class SystemUserDto {
     example: 'external-123',
     required: false,
   })
-  externalId?: string;
+  assembleUserId?: string;
 
   @ApiProperty({
     description: 'Timestamp when the user was created',
@@ -65,9 +65,7 @@ export class SystemUserDto {
   })
   deletedAt?: Date;
 
-  constructor(
-    partial: DeepNullable<SystemUserDto> | DeepPartial<SystemUserDto>,
-  ) {
+  constructor(partial: DeepNullable<UserDto> | DeepPartial<UserDto>) {
     Object.assign(this, partial);
   }
 }
